Fixed text wrap problem on .large-twothird by floating it left

--- a/c/main.css
+++ b/c/main.css
@@ -1171,6 +1171,10 @@ text-align:center;
 		content: "";
 	}
 
+	.projectdetails .large-twothird {
+		float:left;
+	}
+
 }
 
 @media screen and (min-width: 960px) {
